sass/_game.scss
#game {
  grid-area: game;

  background-color: white;
  box-shadow: 0 2px 4px $shadow;

  @include device("medium") {
    position: relative;
    height: $medium-game-height;
  }

  > #title {
    height: $desktop-game-title-height;

    font-family: 'Tinos', serif;
    font-size: 2rem;
    font-weight: 700;
    line-height: 1.2em;

    padding: 0.8em;
    border-bottom: 2px solid $highlight_100;
    background-color: white;


    @include device("medium") {
      position: relative;
      z-index: 1;
      height: 25%;

      text-align: center;
      padding: 0.1em;

      > br {
        display: none;
      }
    }
  }

  @include device("medium") {
    // mobile gradients
    > #gradient-left, #gradient-right {
      position: absolute;
      z-index: 0;

      height: 100%;
      width: 48px;
      top: 0;

      border-top: 2px solid $highlight_100;
      border-bottom: 2px solid $highlight_100;
      background: linear-gradient(
        90deg,
        $game-gradient-from 0%,
        $game-gradient-to 100%
        );
    }

    > #gradient-left {
      left: 0;
    }

    > #gradient-right {
      right: 0;
      transform: rotate(180deg);
    }
  }
}

#game #moves {
  display: grid;
  grid-auto-flow: row;
  grid-template-columns: 14% 43% 43%;
  overflow: scroll;
  max-height: calc(100% - $desktop-game-title-height);

  font-size: 2.4rem;
  line-height: 1.5;
  padding-top: 0.6em;

  > .move-number, .move-white, .move-black {
    position: relative;
    text-align: right;
    padding: 0 0.5em;

    > .comment-small {
      position: absolute;
      top: 50%;
      transform: translateY(-45%);
    }
  }

  > .move-number {
    padding: 0;
  }

  > .move-white {
    .comment-small {
      left: 0.7em;
    }
  }

  > .move-black {
    text-align: left;

    .comment-small {
      right: 0.7em;
    }
  }

  @include device("medium") {
    width: 100%;
    height: 75%;
    max-height: 75%;
    grid-auto-flow: column;
    grid-template-columns: repeat(auto-fill, 5.6em);
    grid-auto-columns: 5.6em;
    grid-template-rows: repeat(3, 1fr);
    justify-items: stretch;

    font-size: 2rem;

    padding: 0;
    border-bottom: 2px solid $highlight_100;

    > .move-number, .move-white, .move-black {
      text-align: center !important;

      > .comment-small {
        width: 0.9em;
      }
    }

    > .move-white .comment-small {
      left: 0.2em;
    }

    > .move-black .comment-small {
      right: 0.2em;
    }
  }
}

// --- selected move in game ---
#game > #moves {
  > .sel-row {
    background-color: $highlight_40;
    border-bottom: 1px solid $highlight_100;
    border-top: 1px solid $highlight_100;

    > span {
      position: relative;
      z-index: 1;
    }

    > #sel-move {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      z-index: 0;
    }

    @include device("medium") {
      border-bottom: none;
      border-top: none;
      border-left: 1px solid $highlight_100;
      border-right: 1px solid $highlight_100;

      > #sel-move {
        right: 50% !important;
        max-width: 6.4em;
        max-height: 1.6em;
        object-fit: fill;
        transform: translateX(50%) translateY(-50%) scale(1.35, 1);
      }
    }
  }

  .move-white #sel-move {
    right: 0.3em;
  }

  .move-black #sel-move {
    left: 0.3em;
  }
}

